Fixed add reads